--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "joi": "^13.1.0",
     "mongoose": "^5.7.7"
   }
 }
